# stcpy

./: .example.env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  models.py
app/controllers/: __init__.py  timetables.py
app/scraper/: __init__.py  itinerarium.py
scripts/: entry.sh
src/stcpy/: __init__.py  main.py  models.py  settings.py
src/stcpy/controllers/: __init__.py  timetables.py
src/stcpy/lib/: openapi.py  settings.py
src/stcpy/scraper/: __init__.py  itinerarium.py
