[tool.poetry]
name = "stcpy"
version = "0.0.1"
description = "A self-hostable API to retrieve real time bus arrival data from STCP."
authors = ["Jose Trigueiros <jjtrigueiros@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
starlite = "^1.51.7"
requests = "^2.28.2"
uvicorn = "^0.21.1"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^22.1.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"